updates to html